--- a/MuTest.ipynb
+++ b/MuTest.ipynb
@@ -246,7 +246,8 @@
     "So, ways of development:\n",
     "* New bots. To test robustness of other types of bot.\n",
     "* New mutant types. To test robustness to different errors.\n",
-    "* Method to compare the semantic similarity. To be sure that the created mutants mean the same thing."
+    "* Method to compare the semantic similarity. To be sure that the created mutants mean the same thing.\n",
+    "* Compare semantic similarity on the results. The robustness can be more precise than 0/1."
    ]
   },
   {
@@ -261,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
