--- a/MutantGeneHomophones.ipynb
+++ b/MutantGeneHomophones.ipynb
@@ -4,35 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rule based homophones generation"
+    "Rule based homophones mutants generation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def file_len(fname):\n",
+    "    \"\"\"\n",
+    "    Computes the length of the file fname.\n",
+    "    \"\"\"\n",
     "    with open(fname) as f:\n",
     "        for i, l in enumerate(f):\n",
     "            pass\n",
     "    return i + 1\n",
     "\n",
     "def nth_repl(s, sub, repl, nth):\n",
+    "    \"\"\"\n",
+    "    Replace the nth occurrence of substring sub by repl on the string s.\n",
+    "    \"\"\"\n",
     "    find = s.find(sub)\n",
     "    # if find is not p1 we have found at least one match for the substring\n",
     "    i = find != -1\n",
@@ -49,11 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_mutant_file(file):\n",
+    "    \"\"\"\n",
+    "    Creates a file with homonym-based mutants of the sentences in the file given.\n",
+    "    \"\"\"\n",
     "    len_file = file_len(file)\n",
     "    with open(file, 'r') as f, open('{}_mut_homophones'.format(file), 'w') as f2:\n",
     "        f2.write(\"{}\\n\".format(len_file))\n",
@@ -64,13 +76,19 @@
     "            with open('homophones.txt', 'r') as homophones:\n",
     "                homoreader = csv.reader(homophones, delimiter=',', quotechar='|')\n",
     "                for homo in homoreader:\n",
+    "                    homo_founded = {}\n",
     "                    for w in words:\n",
     "                        for h in homo:\n",
     "                            if h == w:\n",
+    "                                if h in homo_founded: # deal with homophones that appear many times in 1 sentence\n",
+    "                                    homo_founded[h] += 1\n",
+    "                                else:\n",
+    "                                    homo_founded[h] = 1\n",
     "                                print(w, h)\n",
     "                                for h2 in homo:\n",
     "                                    if h2 != h:\n",
-    "                                        mut = line_formatted.replace(w, h2, 1)\n",
+    "                                        mut = nth_repl(line_formatted, w, h2, homo_founded[h])\n",
+    "#                                         mut = line_formatted.replace(w, h2, 1)\n",
     "                                        mutants.append(mut)\n",
     "            f2.write(\"{}\\n\".format(len(mutants)))\n",
     "            f2.write(line_formatted)\n",
@@ -81,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -118,6 +136,27 @@
    "metadata": {},
    "source": [
     "Inverted Mutation Testing for Bots Robustness Evaluation IMTVARE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function file_len in module __main__:\n",
+      "\n",
+      "file_len(fname)\n",
+      "    Computes the length of the file fname.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(file_len)"
    ]
   }
  ],
