add homophones file and mutants. And last modifications of MuTest general framework

--- a/MuTest.ipynb
+++ b/MuTest.ipynb
@@ -257,7 +257,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sentence generation with corpus"
+   ]
   },
   {
    "cell_type": "code",
